# DRF_HW

./: .env.sample  Dockerfile  README.md  docker-compose.yaml  group_data.json  payments_data.json  pyproject.toml
config/: settings.py  urls.py
course/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0001_initial.py  0002_initial.py  0002_lesson_course.py  0003_alter_lesson_course.py  0003_alter_payments_user.py  0004_course_owner_lesson_owner.py  0004_payments.py  0005_alter_payments_way_of_payment.py  0005_subscription.py  0006_course_price_lesson_price_alter_subscription_course.py  0006_payments_paid_lesson_alter_payments_paid_course.py  0007_alter_course_price_alter_lesson_price.py  0007_alter_payments_user.py  0008_payments_is_paid.py  0009_alter_payments_amount.py
users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: cm.py  csu.py
users/migrations/: 0001_initial.py  0002_remove_user_phone_numner_user_phone_number.py  0002_remove_user_username_user_avatar_user_city_and_more.py
